fixed white space on home

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -111,7 +111,7 @@ code {
 }
 .horizontalDisplay{
   float:left;
-  margin-left:70px;
+  margin-left:100px;
   padding: 20px;
 }
 .createSection{
@@ -119,7 +119,7 @@ code {
   height: 450px;
   float:right;
   margin-top: 40px;
-  margin-right: 70px;
+  margin-right: 100px;
   display: flex;
   background-color: rgba(255,255,255,0.5);
   border-radius: 5%;
